2013-03-03 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWDatabase/WODisplayGroup.h
	* GSWDatabase/WODisplayGroup.m
	* GSWExtensions/GSWCollapsibleComponentContent.h
	* GSWExtensions/GSWCollapsibleComponentContent.m
	* GSWExtensions/GSWDictionaryRepetition.m
	* GSWeb/GSWRequest.m
	  make the methods in the interface match the 
	  methods in the implementation

2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GSWSessionTimeOutManager.h
	  GSWSessionTimeOutManager conforms to NSLocking protocol
	* GSWeb/GSWComponentDefinition.m
	* GSWeb/GSWComponentReference.m
	* GSWeb/GSWContext.m
	* GSWeb/GSWHTMLDynamicElement.m
	* GSWeb/GSWHyperlink.m
	* GSWeb/GSWResourceManager.m
	* GSWeb/GSWResourceRequestHandler.m
	  get rid of extaneous parentheses on equality tests
	* GSWeb/GSWUtils.m
	  NS(U)Integer conversions
	* GSWeb/GSWResourceManager.m
	* GSWeb/GSWHTMLStaticElement.m
	  do not use redundant stringWithString:
	* GSWeb/GSWContext.m
	  move @interface before @implementation
	* GSWDatabase/WODisplayGroup.[h|m]
	* GSWeb/GSWUtils.[h|m]
	  no need for categories to reimplement things
	  already defined in their primary class
	* GSWeb/GSWPngImageInfo.m
	  remove useless #warning
	* GSWeb/GSWApplication.m
	  _globalLock is NSLock, not NSRecursiveLock

2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* regenerate configure from configure.ac

2013-03-02  David Wetzel <dave@turbocat.de>
	add GSWDatabase/Makefile.preamble patch from Sebastian Reitenbach
	
2013-03-01  David Wetzel <dave@turbocat.de>
	* configure.ac
	* GSWeb/GSWUtils.m
	* GSWeb/GSWApplication+Defaults.m
	* GSWeb/GSWHTTPIO.m
	
	Fixed for non-Apple platforms, patch from Sebastian Reitenbach.

2013-02-26  David Wetzel <dave@turbocat.de>
	* added GSWeb/GSWApplication+Defaults.h
	* GSWeb/GNUmakefile: use -Werror
	* GSWeb/GSWFileUpload.* added multiple file support
	* Testing/DynamicElements/FileUpload1Page.wo added multiple file support