@@ -1,3 +1,10 @@
+2013-03-04  David Wetzel <dave@turbocat.de>
+	* GSWExtensions/GSWLongResponsePage.m
+	* GSWDatabase/WODisplayGroup.m
+	* GSWeb/GSWHTMLStaticElement.m
+	* GSWeb/GSWDynamicURLString.m
+	fix some warnings
+
 2013-03-03 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWDatabase/WODisplayGroup.h
 	* GSWDatabase/WODisplayGroup.m
